--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                 <div class="row">
                     <div class="col-12">
                         <h1 class="text-center mt-5">Email List</h1>
+                        <ul>
+                            <li> {{ email }} </li>
+                        </ul>
                     </div>
                 </div>
             </div>
