--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="col-12">
                         <h1 class="text-center mt-5">Email List</h1>
                         <ul>
-                            <li> {{ email }} </li>
+                            <li v-for="email in emails"> {{ email }} </li>
                         </ul>
                     </div>
                 </div>
