pulizia codice e grafica

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="text-center mt-5">Email List</h1>
-                        <ul>
-                            <li v-for="email in emails"> {{ email }} </li>
+                        <h1 class="text-light bg-dark rounded-2 fw-bold p-3 mt-5">Email List</h1>
+                        <ul class="list-unstyled">
+                            <li class="bg-light rounded-2 mt-2 p-3" v-for="email in emails"> {{ email }} </li>
                         </ul>
                     </div>
                 </div>
